Moved notifications (soon to be called pings) settings to its own activity because we need to do a fetch of the user object before displaying on/off state for pings - which may have been changed on another device etc.

--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -381,6 +381,10 @@
       android:name=".SpecialWebViewActivity" >
     </activity> 
     
+    <activity
+      android:name=".PingsSettingsActivity" >
+    </activity> 
+    
     <receiver
       android:name=".appwidget.FriendsAppWidgetProvider"
       android:label="@string/friends_appwidget_3x3_label">
