Added a new activity reached from the venue activity, which allows the user to submit flags for a venue as mislocated/duplicate/closed. Last option is to supply correct info, will add that next.

--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -383,6 +383,10 @@
       android:name=".PingsSettingsActivity" >
     </activity> 
     
+    <activity
+      android:name=".EditVenueOptionsActivity" >
+    </activity> 
+    
     <receiver
       android:name=".appwidget.FriendsAppWidgetProvider"
       android:label="@string/friends_appwidget_3x3_label">
