--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -49,7 +49,8 @@
     android:name="Foursquared"
     android:icon="@drawable/icon"
     android:label="@string/app_name"
-    android:theme="@style/FoursquareTheme" >
+    android:theme="@style/FoursquareTheme"
+    android:debuggable="true" >
 
     <meta-data
       android:name="android.app.default_searchable"
