--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -388,6 +388,11 @@
       android:label="@string/edit_venue_options_label" >
     </activity> 
     
+    <activity
+      android:name="com.facebook.android.FacebookWebViewActivity"
+      android:configChanges="orientation|keyboardHidden">
+    </activity> 
+    
     <receiver
       android:name=".appwidget.FriendsAppWidgetProvider"
       android:label="@string/friends_appwidget_3x3_label">
