Refactored NearbyVenuesActivity so we can support a map of the nearby venues just like FriendsActivity/Map does.

--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -393,6 +393,10 @@
       android:configChanges="orientation|keyboardHidden">
     </activity> 
     
+    <activity
+      android:name=".NearbyVenuesMapActivity" >
+    </activity> 
+    
     <receiver
       android:name=".appwidget.FriendsAppWidgetProvider"
       android:label="@string/friends_appwidget_3x3_label">
