--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
     android:name="android.permission.WAKE_LOCK" /> 
   <uses-permission 
     android:name="android.permission.VIBRATE" /> 
+  <uses-permission 
+    android:name="android.permission.READ_LOGS" />
   <uses-sdk
     android:minSdkVersion="3"
     android:targetSdkVersion="6" />
@@ -391,6 +393,10 @@
     <activity
       android:name="com.facebook.android.FacebookWebViewActivity"
       android:configChanges="orientation|keyboardHidden">
+    </activity> 
+    
+    <activity
+      android:name=".SendLogActivity" >
     </activity> 
     
     <activity
