Added a simple activity to show a full-size image (no zooming or panning). By default we throw an intent to view full size images for user photos. On some devices, the native implementations are really bad or slow (try on nexus-one). The user can choose to use our poor-man's image viewer through the preferences instead if they wish.

--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -403,6 +403,10 @@
       android:name=".NearbyVenuesMapActivity" >
     </activity> 
     
+    <activity
+      android:name=".FullSizeImageActivity" >
+    </activity> 
+    
     <receiver
       android:name=".appwidget.FriendsAppWidgetProvider"
       android:label="@string/friends_appwidget_3x3_label">
