Added tos and privacy links, made sure parameters received in BrowsableActivity get url decoded.

--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -408,7 +408,7 @@
     </activity> 
     
     <activity
-      android:name=".HelpWebViewActivity" >
+      android:name=".WebViewActivity" >
     </activity> 
     
     <receiver
