--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest
   xmlns:android="http://schemas.android.com/apk/res/android"
   package="com.joelapenna.foursquared"
+  android:installLocation="auto"
   android:versionName="2010-08-05" android:versionCode="2010080500">
 
   <uses-permission
@@ -24,7 +25,7 @@
     android:name="android.permission.READ_LOGS" />
   <uses-sdk
     android:minSdkVersion="3"
-    android:targetSdkVersion="6" />
+    android:targetSdkVersion="8" />
   <supports-screens
     largeScreens="true"
     normalScreens="true"
